--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,6 +14,11 @@
         "test:unit": "vitest",
         "test": "npm run test:unit -- --run"
     },
+    "dependencies": {
+        "@lucide/svelte": "^0.511.0",
+        "colyseus.js": "^0.16.18",
+        "theme-change": "^2.5.0"
+    },
     "devDependencies": {
         "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.18.0",
@@ -30,6 +35,8 @@
         "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-svelte": "^3.0.0",
         "globals": "^16.0.0",
+        "houdini": "^1.5.6",
+        "houdini-svelte": "^2.1.16",
         "jsdom": "^26.0.0",
         "svelte": "^5.0.0",
         "svelte-adapter-bun": "^0.5.2",
@@ -39,9 +46,5 @@
         "typescript-eslint": "^8.20.0",
         "vite": "^6.2.6",
         "vitest": "^3.0.0"
-    },
-    "dependencies": {
-        "@lucide/svelte": "^0.511.0",
-        "theme-change": "^2.5.0"
     }
 }
