--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "0.0.1",
     "type": "module",
+    "packageManager": "bun@1.2.14",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
@@ -15,6 +16,7 @@
         "test": "npm run test:unit -- --run"
     },
     "dependencies": {
+        "@colyseus/schema": "^3.0.39",
         "@lucide/svelte": "^0.511.0",
         "colyseus.js": "^0.16.18",
         "theme-change": "^2.5.0"
@@ -23,6 +25,7 @@
         "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.18.0",
         "@stylistic/eslint-plugin": "^4.4.0",
+        "@svelte-put/async-stack": "^1.0.0",
         "@sveltejs/adapter-auto": "^6.0.0",
         "@sveltejs/kit": "^2.16.0",
         "@sveltejs/vite-plugin-svelte": "^5.0.0",
