--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -22,6 +22,6 @@
         "noUnusedParameters": false,
         "noPropertyAccessFromIndexSignature": false,
         "experimentalDecorators": true,
-        "useDefineForClassFields": true,
+        "useDefineForClassFields": false,
     }
 }
